[package]
name = "sprouts-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
once_cell = "1.18.0"

[dependencies.sdl2]
version = "0.35.2"
default_features = false
features = ["gfx", "ttf"]
